<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculationsTv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:text="@string/Zero"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:maxLength="12"/>

        <!-- Row 1   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Clear" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/delete"
                android:onClick="deleteChars"/>

            <Button
                android:id="@+id/percentBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Percentage"
                android:onClick="calculatePercentages">

            </Button>

            <Button
                android:id="@+id/dividerBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Divider"
                android:onClick="addDivider">

            </Button>


        </LinearLayout>

        <!-- Row 2   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Seven"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Eight"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Nine"
                android:onClick="showNumbers">

            </Button>

            <Button
                android:id="@+id/multiplyBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Multiplication"
                android:onClick="addMultiplication">

            </Button>


        </LinearLayout>

        <!-- Row 3   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Four"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Five"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Six"
                android:onClick="showNumbers">

            </Button>

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Minus"
                android:onClick="addMinus">

            </Button>


        </LinearLayout>

        <!-- Row 4   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/One"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Two"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Three"
                android:onClick="showNumbers">

            </Button>

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Plus"
                android:onClick="addPlus"/>


        </LinearLayout>

        <!-- Row 5   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/dotBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Dot"
                android:onClick="addDot"/>

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Zero"
                android:onClick="showNumbers"/>

            <Button
                android:id="@+id/equalsBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Equals"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@android:color/holo_orange_light">

            </Button>


        </LinearLayout>

</LinearLayout>